# rm_compress

./: .gitignore  README.md
rm_qvrf_receiver/: AGENT_DEPLOY.md  README.md  install.sh
rm_qvrf_receiver/client/: pyproject.toml
rm_qvrf_receiver/client/src/rm_stream/: __init__.py  cli.py  codec_decoder.py  display.py  frame_assembler.py  inference_engine.py  mqtt_transport.py  pipeline.py  protocol.py  realesr_model.py  rlfn_model.py  shm_ring_reader.py  sr_model.py  tensorrt_runner.py
rm_qvrf_receiver/client/src/rm_stream/codecs/: __init__.py  qvrf.py
rm_qvrf_receiver/client/src/rm_stream/gui/: __init__.py  __main__.py  client_window.py  competition_panel.py  console_widget.py  debug_panel.py  decode_worker.py  mqtt_worker.py  video_panel.py
rm_qvrf_receiver/commu/: pyproject.toml
rm_qvrf_receiver/commu/src/rm_custom_client/: __init__.py  cli.py  gui.py  gui_qt.py  mqtt_receiver.py  protobuf_tools.py  serial_comm.py  video_decoder.py  video_receiver.py
rm_qvrf_receiver/commu/src/rm_custom_client/proto/: __init__.py  rm_custom_client.proto  rm_custom_client_pb2.py
rm_qvrf_receiver/config/: receiver.env
rm_qvrf_receiver/models/: msssim_g_s_fp32.xml  msssim_h_a_fp32.xml  msssim_h_s_fp32.xml  qvrf_gs_rlfn_x2_192.onnx  qvrf_gs_rlfn_x2_448.onnx  rlfn_s_x2_448.onnx
rm_qvrf_receiver/models/engines/: rlfn_s_x2_192x384_fp16_iofp32_fixed_trt10_16_1_11_nvidia_geforce_rtx_4060_laptop_gpu_sm89.engine  rlfn_s_x2_448x896_fp16_iofp32_fixed_trt10_16_1_11_nvidia_geforce_rtx_4060_laptop_gpu_sm89.engine
rm_qvrf_receiver/scripts/: build_receiver_trt_engines.sh  check_env.sh  export_qvrf_rlfn_fused_to_onnx.py  export_rlfn_to_onnx.py  install_nvidia_runtime.sh  launch_camera_stream.sh  optimize_gpu_freq.sh  probe_mqtt_client_ids.py  run_448.sh  run_receiver.sh  test_m4_gui_link.py  trt_sidecar.py
rm_qvrf_sender/: AGENT_DEPLOY.md  README.md  install.sh
rm_qvrf_sender/config/: 448.env  sender.env
rm_qvrf_sender/models/: msssim_g_a.xml  msssim_g_a_fp32.xml
rm_qvrf_sender/onboard/: CMakeLists.txt
rm_qvrf_sender/onboard/camera/: camera_capture.cpp
rm_qvrf_sender/onboard/cli/: main.cpp
rm_qvrf_sender/onboard/librmcompress/include/rmcompress/: entropy_coder.h  ga_encoder.h  inference_engine.h  mbt_encoder.h  preprocess.h  preprocess_cuda.h  protocol.h  rm_compress.h  shm_ring.h
rm_qvrf_sender/onboard/librmcompress/src/: compressor.cpp  entropy_coder.cpp  ga_encoder.cpp  inference_engine.cpp  mbt_encoder.cpp  preprocess.cpp  preprocess_cuda.cu  protocol.cpp  shm_ring.cpp  tensorrt_ga_encoder.cpp
rm_qvrf_sender/onboard/reference/: rans_interface.hpp
rm_qvrf_sender/onboard/serial/: serial_tx.cpp  serial_tx.h
rm_qvrf_sender/onboard/test/: qvrf_dryrun_dump.cpp  test_entropy.cpp
rm_qvrf_sender/scripts/: build_sender.sh  check_env.sh  convert_onnx_to_openvino.sh  export_msssim_to_onnx.py  launch_camera_stream.sh  run_camera_448.sh  run_camera_sender.sh  run_dry_sender.sh
rm_qvrf_sender/tools/: ipc_to_mqtt.py
