[project]
name = "rm-stream"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "compressai>=1.2",
    "opencv-python-headless>=4.8",
    "numpy",
    "paho-mqtt>=2.1.0",
    "openvino>=2024.0.0",
    "pyserial>=3.5",
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0,<1.24",
    "onnxscript>=0.7",
    "ml-dtypes>=0.5",
    "pyqt5>=5.15",
    "onnx-simplifier>=0.4.0",
    "realesrgan",
    "cupy-cuda12x>=13.6.0",
]

[project.scripts]
rm-stream = "rm_stream.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["../tests"]
python_files = ["test_*.py"]

[tool.uv.sources]
realesrgan = { git = "https://github.com/xinntao/Real-ESRGAN.git" }
